/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package hbase.pb;

option java_package = "org.apache.hadoop.hbase.protobuf.generated";
option java_outer_classname = "IdxHbaseProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

import "Aggregate.proto";
import "Client.proto";

message IdxHbaseRequest {
  required Scan scan = 1;
  optional string idxName = 2;
  optional string familyName = 3;
  optional string columns = 4;
  optional int32 destPos = 5;
  repeated string idxcolumn = 6;
}

service IdxHbaseService {
  rpc addIdx (IdxHbaseRequest) returns (AggregateResponse);
  rpc addIdxTbData (IdxHbaseRequest) returns (AggregateResponse);
  rpc dropIdx (IdxHbaseRequest) returns (AggregateResponse);
  rpc dropIdxTbData (IdxHbaseRequest) returns (AggregateResponse);
  rpc scanIdxRangeTb (IdxHbaseRequest) returns (AggregateResponse);
}